[package]
name = "tx-sim"
version = "0.1.0"
authors = ["Ryan <ryan.michael.tate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rand = "0.8.3"
serde = { version = "1.0.125", features = ["derive"]}
thiserror = "1.0.24"
